--- a/JNTUA/Day29.ipynb
+++ b/JNTUA/Day29.ipynb
@@ -1559,114 +1559,85 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "empty range in randrange(1742342400, 1741392001)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[3], line 28\u001b[0m\n\u001b[0;32m     26\u001b[0m guest_id \u001b[38;5;241m=\u001b[39m random\u001b[38;5;241m.\u001b[39mrandint(\u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m100\u001b[39m)\n\u001b[0;32m     27\u001b[0m check_in \u001b[38;5;241m=\u001b[39m fake\u001b[38;5;241m.\u001b[39mdate_between(start_date\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m-30d\u001b[39m\u001b[38;5;124m\"\u001b[39m, end_date\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m+30d\u001b[39m\u001b[38;5;124m\"\u001b[39m)  \u001b[38;5;66;03m# Random check-in date\u001b[39;00m\n\u001b[1;32m---> 28\u001b[0m check_out \u001b[38;5;241m=\u001b[39m fake\u001b[38;5;241m.\u001b[39mdate_between(start_date\u001b[38;5;241m=\u001b[39mcheck_in, end_date\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m+10d\u001b[39m\u001b[38;5;124m\"\u001b[39m) \u001b[38;5;28;01mif\u001b[39;00m random\u001b[38;5;241m.\u001b[39mrandom() \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m0.2\u001b[39m \u001b[38;5;28;01melse\u001b[39;00m \u001b[43mfake\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdate_between\u001b[49m\u001b[43m(\u001b[49m\u001b[43mstart_date\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43m-10d\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mend_date\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mcheck_in\u001b[49m\u001b[43m)\u001b[49m  \u001b[38;5;66;03m# 20% bad check-out dates\u001b[39;00m\n\u001b[0;32m     29\u001b[0m room_no \u001b[38;5;241m=\u001b[39m random\u001b[38;5;241m.\u001b[39mchoice([\u001b[38;5;241m101\u001b[39m, \u001b[38;5;241m102\u001b[39m, \u001b[38;5;241m103\u001b[39m, \u001b[38;5;241m201\u001b[39m, \u001b[38;5;241m202\u001b[39m, \u001b[38;5;241m301\u001b[39m, \u001b[38;5;241m302\u001b[39m, \u001b[38;5;241m303\u001b[39m, \u001b[38;5;28;01mNone\u001b[39;00m]) \u001b[38;5;28;01mif\u001b[39;00m random\u001b[38;5;241m.\u001b[39mrandom() \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m0.1\u001b[39m \u001b[38;5;28;01melse\u001b[39;00m random\u001b[38;5;241m.\u001b[39mrandint(\u001b[38;5;241m400\u001b[39m, \u001b[38;5;241m500\u001b[39m)  \u001b[38;5;66;03m# Some missing and non-existent rooms\u001b[39;00m\n\u001b[0;32m     30\u001b[0m booking_data\u001b[38;5;241m.\u001b[39mappend([i, guest_id, check_in, check_out, room_no])\n",
+      "File \u001b[1;32m~\\AppData\\Roaming\\Python\\Python313\\site-packages\\faker\\providers\\date_time\\__init__.py:2128\u001b[0m, in \u001b[0;36mProvider.date_between\u001b[1;34m(self, start_date, end_date)\u001b[0m\n\u001b[0;32m   2126\u001b[0m start_date \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_parse_date(start_date)\n\u001b[0;32m   2127\u001b[0m end_date \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_parse_date(end_date)\n\u001b[1;32m-> 2128\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdate_between_dates\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdate_start\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mstart_date\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdate_end\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mend_date\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[1;32m~\\AppData\\Roaming\\Python\\Python313\\site-packages\\faker\\providers\\date_time\\__init__.py:2240\u001b[0m, in \u001b[0;36mProvider.date_between_dates\u001b[1;34m(self, date_start, date_end)\u001b[0m\n\u001b[0;32m   2227\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21mdate_between_dates\u001b[39m(\n\u001b[0;32m   2228\u001b[0m     \u001b[38;5;28mself\u001b[39m,\n\u001b[0;32m   2229\u001b[0m     date_start: Optional[DateParseType] \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m,\n\u001b[0;32m   2230\u001b[0m     date_end: Optional[DateParseType] \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m,\n\u001b[0;32m   2231\u001b[0m ) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m dtdate:\n\u001b[0;32m   2232\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[0;32m   2233\u001b[0m \u001b[38;5;124;03m    Get a random date between the two given dates.\u001b[39;00m\n\u001b[0;32m   2234\u001b[0m \n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m   2238\u001b[0m \u001b[38;5;124;03m    :sample:\u001b[39;00m\n\u001b[0;32m   2239\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n\u001b[1;32m-> 2240\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdate_time_between_dates\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdate_start\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdate_end\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241m.\u001b[39mdate()\n",
+      "File \u001b[1;32m~\\AppData\\Roaming\\Python\\Python313\\site-packages\\faker\\providers\\date_time\\__init__.py:2210\u001b[0m, in \u001b[0;36mProvider.date_time_between_dates\u001b[1;34m(self, datetime_start, datetime_end, tzinfo)\u001b[0m\n\u001b[0;32m   2201\u001b[0m datetime_start_ \u001b[38;5;241m=\u001b[39m (\n\u001b[0;32m   2202\u001b[0m     datetime_to_timestamp(datetime\u001b[38;5;241m.\u001b[39mnow(tzinfo))\n\u001b[0;32m   2203\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m datetime_start \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[0;32m   2204\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_parse_date_time(datetime_start)\n\u001b[0;32m   2205\u001b[0m )\n\u001b[0;32m   2206\u001b[0m datetime_end_ \u001b[38;5;241m=\u001b[39m (\n\u001b[0;32m   2207\u001b[0m     datetime_to_timestamp(datetime\u001b[38;5;241m.\u001b[39mnow(tzinfo)) \u001b[38;5;28;01mif\u001b[39;00m datetime_end \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;28;01melse\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_parse_date_time(datetime_end)\n\u001b[0;32m   2208\u001b[0m )\n\u001b[1;32m-> 2210\u001b[0m timestamp \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_rand_seconds\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdatetime_start_\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdatetime_end_\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m   2211\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m   2212\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m tzinfo \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n",
+      "File \u001b[1;32m~\\AppData\\Roaming\\Python\\Python313\\site-packages\\faker\\providers\\date_time\\__init__.py:110\u001b[0m, in \u001b[0;36mProvider._rand_seconds\u001b[1;34m(self, start_datetime, end_datetime)\u001b[0m\n\u001b[0;32m    109\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21m_rand_seconds\u001b[39m(\u001b[38;5;28mself\u001b[39m, start_datetime: \u001b[38;5;28mint\u001b[39m, end_datetime: \u001b[38;5;28mint\u001b[39m) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m \u001b[38;5;28mfloat\u001b[39m:\n\u001b[1;32m--> 110\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mgenerator\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mrandom\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mrandint\u001b[49m\u001b[43m(\u001b[49m\u001b[43mstart_datetime\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mend_datetime\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[1;32mc:\\Program Files\\Python313\\Lib\\random.py:340\u001b[0m, in \u001b[0;36mRandom.randint\u001b[1;34m(self, a, b)\u001b[0m\n\u001b[0;32m    336\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21mrandint\u001b[39m(\u001b[38;5;28mself\u001b[39m, a, b):\n\u001b[0;32m    337\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"Return random integer in range [a, b], including both end points.\u001b[39;00m\n\u001b[0;32m    338\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n\u001b[1;32m--> 340\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mrandrange\u001b[49m\u001b[43m(\u001b[49m\u001b[43ma\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mb\u001b[49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[1;32mc:\\Program Files\\Python313\\Lib\\random.py:323\u001b[0m, in \u001b[0;36mRandom.randrange\u001b[1;34m(self, start, stop, step)\u001b[0m\n\u001b[0;32m    321\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m width \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m0\u001b[39m:\n\u001b[0;32m    322\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m istart \u001b[38;5;241m+\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_randbelow(width)\n\u001b[1;32m--> 323\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mempty range in randrange(\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mstart\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m, \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mstop\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m)\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m    325\u001b[0m \u001b[38;5;66;03m# Non-unit step argument supplied.\u001b[39;00m\n\u001b[0;32m    326\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m istep \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m0\u001b[39m:\n",
+      "\u001b[1;31mValueError\u001b[0m: empty range in randrange(1742342400, 1741392001)"
+     ]
+    }
+   ],
    "source": [
-    "from google.protobuf import message\n",
+    "import pandas as pd\n",
+    "import random\n",
+    "import faker\n",
     "\n",
-    "# Assuming user.proto is compiled to user_pb2\n",
-    "import user_pb2\n",
+    "# Initialize Faker for generating fake names, emails, and addresses\n",
+    "fake = faker.Faker()\n",
     "\n",
-    "# Creating a new User object\n",
-    "user = user_pb2.User()\n",
-    "user.name = \"John Doe\"\n",
-    "user.age = 30\n",
-    "user.email = \"john.doe@example.com\"\n",
+    "# Define the file path where the Excel file will be saved\n",
+    "file_path = \"hotel_messy_data.xlsx\"\n",
     "\n",
-    "print(\"Serialized User:\")\n",
-    "print(user)\n",
+    "# Generate 100 guests (with some duplicate names and messy phone numbers)\n",
+    "guest_data = []\n",
+    "for i in range(1, 101):\n",
+    "    # guest_id = random.randint(1, 100)\n",
+    "    name = fake.name() if random.random() > 0.1 else \"Rajesh Sharma\"  # 10% chance of duplicate names\n",
+    "    phone = str(fake.random_int(9000000000, 9999999999)) if random.random() > 0.1 else \"98ABC\" + str(fake.random_int(1000, 9999))  # Some invalid phone numbers\n",
+    "    email = fake.email()\n",
+    "    address = fake.city()\n",
+    "    guest_data.append([i,name, phone, email, address])\n",
     "\n",
-    "# Serializing the user object to bytes\n",
-    "serialized_user = user.SerializeToString()\n",
+    "guest_df = pd.DataFrame(guest_data, columns=[\"guest_id\", \"name\", \"phone\", \"email\", \"address\"])\n",
     "\n",
-    "print(\"\\nSerialized User (bytes):\")\n",
-    "print(serialized_user)\n",
+    "# Generate 200 bookings (with check-in/check-out issues and missing room numbers)\n",
+    "booking_data = []\n",
+    "for i in range(1, 201):\n",
+    "    guest_id = random.randint(1, 100)\n",
+    "    check_in = fake.date_between(start_date=\"-30d\", end_date=\"+30d\")  # Random check-in date\n",
+    "    check_out = fake.date_between(start_date=check_in, end_date=\"+10d\") if random.random() > 0.2 else fake.date_between(start_date=\"-10d\", end_date=check_in)  # 20% bad check-out dates\n",
+    "    room_no = random.choice([101, 102, 103, 201, 202, 301, 302, 303, None]) if random.random() > 0.1 else random.randint(400, 500)  # Some missing and non-existent rooms\n",
+    "    booking_data.append([i, guest_id, check_in, check_out, room_no])\n",
     "\n",
-    "# Deserializing the bytes back to a User object\n",
-    "deserialized_user = user_pb2.User()\n",
-    "deserialized_user.ParseFromString(serialized_user)\n",
+    "booking_df = pd.DataFrame(booking_data, columns=[\"booking_id\", \"guest_id\", \"check_in\", \"check_out\", \"room_no\"])\n",
     "\n",
-    "print(\"\\nDeserialized User:\")\n",
-    "print(deserialized_user)\n",
+    "# Generate 50 rooms\n",
+    "room_data = []\n",
+    "room_types = [\"Deluxe\", \"Suite\", \"Standard\"]\n",
+    "for i in range(101, 151):\n",
+    "    room_type = random.choice(room_types)\n",
+    "    price = random.choice([2500, 4000, 8000])\n",
+    "    status = random.choice([\"Booked\", \"Available\"])\n",
+    "    room_data.append([i, room_type, price, status])\n",
     "\n",
-    "# Example of validation (basic checks)\n",
-    "def validate_user(user_obj):\n",
-    "    if not isinstance(user_obj, user_pb2.User):\n",
-    "        return False, \"Not a User object\"\n",
+    "room_df = pd.DataFrame(room_data, columns=[\"room_no\", \"room_type\", \"price_per_night\", \"status\"])\n",
     "\n",
-    "    if not user_obj.name:\n",
-    "        return False, \"Name is required\"\n",
+    "# Save the data to an Excel file\n",
+    "with pd.ExcelWriter(file_path) as writer:\n",
+    "    guest_df.to_excel(writer, sheet_name=\"Guest Table\", index=False)\n",
+    "    booking_df.to_excel(writer, sheet_name=\"Booking Table\", index=False)\n",
+    "    room_df.to_excel(writer, sheet_name=\"Room Table\", index=False)\n",
     "\n",
-    "    if user_obj.age < 0:\n",
-    "        return False, \"Age must be non-negative\"\n",
-    "\n",
-    "    if \"@\" not in user_obj.email:\n",
-    "        return False, \"Invalid email format\"\n",
-    "\n",
-    "    return True, \"User is valid\"\n",
-    "\n",
-    "validation_result, validation_message = validate_user(deserialized_user)\n",
-    "print(\"\\nValidation Result:\")\n",
-    "print(f\"Valid: {validation_result}, Message: {validation_message}\")\n",
-    "\n",
-    "#Example of an invalid user.\n",
-    "invalid_user = user_pb2.User()\n",
-    "invalid_user.name = \"\"\n",
-    "invalid_user.age = -1\n",
-    "invalid_user.email = \"test\"\n",
-    "\n",
-    "invalid_validation_result, invalid_validation_message = validate_user(invalid_user)\n",
-    "print(\"\\nInvalid User Validation Result:\")\n",
-    "print(f\"Valid: {invalid_validation_result}, Message: {invalid_validation_message}\")\n",
-    "\n",
-    "#Example showing how to work with optional or repeated fields.\n",
-    "syntax_proto_optional_repeated = \"\"\"\n",
-    "syntax = \"proto3\";\n",
-    "message ExampleMessage{\n",
-    "    string optional_string = 1;\n",
-    "    repeated int32 repeated_int = 2;\n",
-    "}\n",
-    "\"\"\"\n",
-    "print(\"\\nExample of optional and repeated fields in protobuf (not run):\")\n",
-    "print(syntax_proto_optional_repeated)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Serialized User:\n",
-    "name: \"John Doe\"\n",
-    "age: 30\n",
-    "email: \"john.doe@example.com\"\n",
-    "\n",
-    "Serialized User (bytes):\n",
-    "b'\\n\\x08John Doe\\x10\\x1e\\x1a\\x13john.doe@example.com'\n",
-    "\n",
-    "Deserialized User:\n",
-    "name: \"John Doe\"\n",
-    "age: 30\n",
-    "email: \"john.doe@example.com\"\n",
-    "\n",
-    "Validation Result:\n",
-    "Valid: True, Message: User is valid\n",
-    "\n",
-    "Invalid User Validation Result:\n",
-    "Valid: False, Message: Name is required\n",
-    "\n",
-    "Example of optional and repeated fields in protobuf (not run):\n",
-    "syntax = \"proto3\";\n",
-    "message ExampleMessage{\n",
-    "    string optional_string = 1;\n",
-    "    repeated int32 repeated_int = 2;\n",
-    "}"
+    "print(f\"Messy hotel dataset with 200 rows saved as {file_path}\")\n"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
